# Metodos-Numericos---TP1

./: README.md  definiciones.h  funciones-principales.cpp  funciones-principales.h  funciones-secundarias.cpp  funciones-secundarias.h  main.cpp
data/: Liga_Inglesa.in  Liga_Inglesa_exp_0.out  Liga_Inglesa_exp_1.out  Liga_Modificada.out  nba_2016_scores_exp_0.out
metodos-tp1/: .gitignore  CMakeLists.txt  Notebook.ipynb  requirements-python.txt
metodos-tp1/.ipynb_checkpoints/: Notebook-checkpoint.ipynb
metodos-tp1/data/: Liga_Inglesa_0.out  Liga_Inglesa_1.out  Liga_Inglesa_exp.in  nba_2016_scores_exp.in  nba_2016_scores_exp_1.out
metodos-tp1/src/TestsWP/: test-prob-1.out  test-prob-2.out  test1.expected  test1.in  test2.expected
metodos-tp1/src/tools/: massey2mn.py
src/TestsWP/: test-prob-1.expected  test-prob-2.expected  test1.out
src/scripts/: metnum.py
src/tools/: atp2mn.py
